* TransFirsTransactionExpress: Remove blank cvv element [davidsantoso]
* PayU Latam: Update supported countries list [shasum]
* TransFirsTransactionExpress: Take into account blank string CVV [davidsantoso]
* Barclaycard SmartPay: Update supported countries [shasum]
* Worldpay: Report error code [curiousepic]
* CitrusPay: Update URL to current API version [davidsantoso]

== Version 1.60.0 (July 4, 2016)
* Orbital: Fix CC num leak on profile calls [drewblas]
* VisaNetPeru: Add ability to refund [duff]
* AuthorizeNet: Fix store using new profile [duff]
* Clearhaus: Support private key for signature [curiousepic]
* Clearhaus: Copy private_key when stripping [curiousepic]
* CertoDirect: Remove gateway [shiroginne]
* Braintree: Extra error messaging [jordan-brough]
* AuthorizeNetCim: Set error code for AuthorizeNetCimGateway response [ka8725]
* Quickpay v10: Remove amount requirement for store [curiousepic]
* PSLCards: correct namespace in doc for Response object from ActiveRecord::Billing to ActiveMerchant::Billing [CJ Keeney]
* Pagar.me: Add pagar.me [chrisenytc]
* Stripe: Update Readme to show stripe support [rhlrjv]
* Orbital: Add support for the BRL currency [duff]
* GlobalTransport: Require TLSv1 [duff]
* Openpay: Allow currency to be specified [darkaz]
* DataCash: Use API version 2 [curiousepic]
* Stripe: Support verify_credentials [duff]
* AuthorizeNet: Support verify_credentials [duff]
* BraintreeBlue: Support verify_credentials [duff]
* Redsys: Added SAR currency [agseco]
* QuickPay: Adding customer_ip for authorize action in quickpay [dinesh]
* MaxiPago: add void and refund [shasum]
* MaxiPago: Allow processor_id override [duff]
* Stripe: Interpret string input to store method as token identifier [bizla]
* MaxiPago: Add verify and scrub [shasum]
* Stripe: Remove metadata restriction from EMV transactions [bizla]
* SagePay: Add optional fields to SagePay requests [cristianstanescu]