@@ -81,6 +81,36 @@ class ConektaTest < Test::Unit::TestCase
     assert response.test?
   end
 
+  def test_successful_void
+    @gateway.expects(:ssl_request).returns(successful_authorize_response)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success response
+    assert_instance_of Response, response
+    assert_equal nil, response.message
+    assert response.test?
+
+    @gateway.expects(:ssl_request).returns(successful_void_response)
+    assert response = @gateway.void(successful_authorize_response['id'])
+    assert_success response
+    assert_instance_of Response, response
+    assert_equal nil, response.message
+    assert response.test?
+  end
+
+  def test_unsuccessful_void
+    @gateway.expects(:ssl_request).returns(successful_authorize_response)
+    assert response = @gateway.authorize(@amount, @credit_card, @options)
+    assert_success response
+    assert_instance_of Response, response
+    assert_equal nil, response.message
+    assert response.test?
+
+    @gateway.expects(:ssl_request).returns(failed_void_response)
+    assert response = @gateway.void(successful_authorize_response['id'])
+    assert_failure response
+    assert response.test?
+  end
+
   def test_unsuccessful_authorize
     @gateway.expects(:ssl_request).returns(failed_authorize_response)
     assert response = @gateway.authorize(@amount, @declined_card, @options)
@@ -206,6 +236,65 @@ class ConektaTest < Test::Unit::TestCase
       'livemode' => false,
       'created_at' => 1377535391,
       'status' => 'pre_authorized',
+      'currency' => 'MXN',
+      'description' => 'Blue clip',
+      'reference_id' => nil,
+      'failure_code' => nil,
+      'failure_message' => nil,
+      'object' => 'charge',
+      'amount' => 300,
+      'processed_at' => nil,
+      'fee' => 348,
+      'card' => {
+        'name' => 'Mario Reyes',
+        'exp_month' => '01',
+        'exp_year' => '18',
+        'street2' => 'Paris',
+        'street3' => 'nil',
+        'city' => 'Guerrero',
+        'zip' => '5555',
+        'country' => 'Mexico',
+        'brand' => 'VISA',
+        'last4' => '1111',
+        'object' => 'card',
+        'fraud_response' => '3d_secure_required',
+        'redirect_form' => {
+          'url' => 'https => //eps.banorte.com/secure3d/Solucion3DSecure.htm',
+          'action' => 'POST',
+          'attributes' => {
+            'MerchantId' => '7376961',
+            'MerchantName' => 'GRUPO CONEKTAME',
+            'MerchantCity' => 'EstadodeMexico',
+            'Cert3D' => '03',
+            'ClientId' => '60518',
+            'Name' => '7376962',
+            'Password' => 'fgt563j',
+            'TransType' => 'PreAuth',
+            'Mode' => 'Y',
+            'E1' => 'qKNKjndV9emCxuKE1G4z',
+            'E2' => '521b859fcfc26c0f180002d9',
+            'E3' => 'Y',
+            'ResponsePath' => 'https => //eps.banorte.com/RespuestaCC.jsp',
+            'CardType' => 'VISA',
+            'Card' => '4111111111111111',
+            'Cvv2Indicator' => '1',
+            'Cvv2Val' => '183',
+            'Expires' => '01/18',
+            'Total' => '3.0',
+            'ForwardPath' => 'http => //localhost => 3000/charges/banorte_3d_secure_response',
+            'auth_token' => 'qKNKjndV9emCxuKE1G4z'
+          }
+        }
+      }
+    }.to_json
+  end
+
+  def successful_void_response
+    {
+      'id' => '521b859fcfc26c0f180002d9',
+      'livemode' => false,
+      'created_at' => 1377535391,
+      'status' => 'voided',
       'currency' => 'MXN',
       'description' => 'Blue clip',
       'reference_id' => nil,
